--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ a{
 
 @media screen and (max-width: 600px) {
   .search-bar {
-    width: 200px;
+    width: 70%;
   }
   .react-player{
     height: 45vh !important;
